# ai-research

./: README.md  justfile  playground.ipynb  pyproject.toml
.cursor/rules/: handbook-textbook.mdc
app/: main.py  playground.ipynb
app/math/: 00_math_basics.ipynb  01_functions.ipynb  02_derivatives.ipynb  03_vectors.ipynb  04_gradients.ipynb  05_matrices.ipynb  06_probability.ipynb
app/neural_networks/: 01_single_neuron.ipynb  02_building_a_layer.ipynb  03_backpropagation.ipynb
app/pytorch/: 01_creating_tensors.ipynb  02_matrix_multiplication.ipynb  03_transposing_tensors.ipynb  04_reshaping_tensors.ipynb  05_indexing_and_slicing.ipynb  06_concatenating_tensors.ipynb  07_special_tensors.ipynb
app/transformers/: 01_attention_mechanism.ipynb  02_self_attention.ipynb  03_multi_head_attention.ipynb  04_decoder_only_transformer.ipynb
app/utils/: plot.py
book/: README.md  SUMMARY.md
book/00-intro/: 01-how-to-use-this-handbook.md  02-prerequisites.md  03-learning-path.md  04-vocabulary-roadmap.md  05-math-basics-cheatsheet.md  05-math-basics.md
book/01-math/: 01-functions-cheatsheet.md  01-functions.md  02-derivatives-cheatsheet.md  02-derivatives.md  03-vectors-cheatsheet.md  03-vectors.md  04-gradients-cheatsheet.md  04-gradients.md  05-matrices-cheatsheet.md  05-matrices.md  06-probability-cheatsheet.md  06-probability.md
book/02-pytorch/: 01-creating-tensors-cheatsheet.md  01-creating-tensors.md  02-matrix-multiplication-cheatsheet.md  02-matrix-multiplication.md  (+10 more)
scripts/: generate_cheatsheets.py  generate_notebooks.py  validate_chapter.py
(+23 files in other folders)
